--- a/package.json
+++ b/package.json
@@ -3,11 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@blueprintjs/core": "^2.3.1",
+    "chart.js": "^2.7.2",
     "history": "^4.7.2",
+    "material-ui": "^0.20.0",
     "react": "^16.2.0",
+    "react-alert": "^4.0.4",
+    "react-alert-template-basic": "^1.0.0",
+    "react-chartjs": "^1.2.0",
+    "react-chartjs-2": "^2.7.2",
     "react-dom": "^16.2.0",
+    "react-flash-message": "^1.0.2",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.1"
+    "react-scripts": "1.1.1",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.2.0",
+    "semantic-ui-react": "^0.80.0",
+    "styled-components": "^3.2.6"
   },
   "scripts": {
     "start": "react-scripts start",
